# Skidsploit-MacOS-Executor

./: CMakeLists.txt  README.md  client.py  install.sh  main.cpp
dependencies/extra/obfuscation/: ObfuscateV1.h  ObfuscateV2.h
dependencies/extra/src/decl/: structs.hpp
dependencies/extra/src/update/: update.hpp
dependencies/luau/Common/include/Luau/: Common.h
dependencies/luau/VM/include/: lua.h
dependencies/luau/VM/src/: lobject.h  lstate.h
in/: insert_dylib
